force-app/main/default/objects/npsp__Batch_Data_Entry_Settings__c/fields/npsp__Allow_Blank_Opportunity_Names__c.field-meta.xml
<CustomField>
    <fullName>npsp__Allow_Blank_Opportunity_Names__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set, then Batch Data Entry will never name Opportunities, even if they are blank (not included on the BDE page).</description>
    <inlineHelpText>If set, then Batch Data Entry will never name Opportunities, even if they are blank (not included on the BDE page).</inlineHelpText>
    <label>Allow Blank Opportunity Names</label>
    <type>Checkbox</type>
</CustomField>