force-app/main/default/objects/npsp__Batch_Data_Entry_Settings__c/fields/npsp__Opportunity_Naming__c.field-meta.xml
<CustomField>
    <fullName>npsp__Opportunity_Naming__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This setting automatically generates the record name for batch entered Opportunity records based on the value of the entered fields.</inlineHelpText>
    <label>Opportunity Naming</label>
    <type>Checkbox</type>
</CustomField>